--- a/utils.ipynb
+++ b/utils.ipynb
@@ -21,8 +21,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cb67edef",
+   "metadata": {},
+   "source": [
+    "##### PatchEmbed"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 98,
    "id": "4a13c81f",
    "metadata": {},
    "outputs": [],
@@ -35,7 +43,7 @@
     "            padding=padding\n",
     "        )\n",
     "    \n",
-    "    def foward(self, x):\n",
+    "    def forward(self, x):\n",
     "        x = self.proj(x)\n",
     "        # b,c,h,w -> b,h,w,c\n",
     "        x = x.permute(0, 2, 3, 1)\n",
@@ -222,6 +230,120 @@
     "plt.imshow(output_img3[0][0].cpu().detach())\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "578a041e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 341, 341, 64])"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "PatchEmbed(kernel_size=3, stride=3, padding=0, in_chans=3, embed_dim=64)(inp.permute(0, 3, 1, 2)).shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9640c6e7",
+   "metadata": {},
+   "source": [
+    "##### window_partition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "id": "e87df77f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def window_partition(x, window_size):\n",
+    "    B, H, W, C = x.shape\n",
+    "\n",
+    "    # this is for padding calculation, such that height and width can be multiplied by window_size\n",
+    "    # H % window_size : gives reminder\n",
+    "    # window_size - H % window_size: subtracting reminder from window_size will how much extra we need to add.\n",
+    "    # final  % window_size make sure to handle already dividable cases.\n",
+    "    pad_h = (window_size - H % window_size) % window_size\n",
+    "    pad_w = (window_size - W % window_size) % window_size\n",
+    "\n",
+    "\n",
+    "    if pad_h > 0 or pad_w > 0:\n",
+    "        # order of padding right to lef so in our case (C, W, H)\n",
+    "        # for each dim you can pad two sides. here we only need to pad one side of hight and width\n",
+    "        x = F.pad(x, (0, 0, 0, pad_w, 0, pad_h))\n",
+    "    \n",
+    "    Hp, Wp = H + pad_h, W + pad_w\n",
+    "\n",
+    "    # make it a view square of hight and width (B, window_size, window_size, window_size, window_size, C)\n",
+    "    x = x.view(B, Hp//window_size, window_size, Wp//window_size, window_size, C)\n",
+    "\n",
+    "    # move height window with the corresponding width window this can be done by swapping 2,3 dim to 3,2\n",
+    "    windows = x.permute(0, 1, 3, 2, 4, 5)\n",
+    "    \n",
+    "    # now expand each window to across batch\n",
+    "    windows = windows.contiguous().view(-1, window_size, window_size, C)\n",
+    "    \n",
+    "    return windows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "id": "a05fd2a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([1, 7, 7, 4]), torch.Size([9, 3, 3, 4]))"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = torch.randn(1, 7, 7, 4).float()\n",
+    "\n",
+    "x_t = window_partition(x, window_size=3)\n",
+    "x.shape, x_t.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2c19bcd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0df45250",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c5da6c3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
