--- a/utils.ipynb
+++ b/utils.ipynb
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 145,
    "id": "e87df77f",
    "metadata": {},
    "outputs": [],
@@ -291,7 +291,9 @@
     "    # move height window with the corresponding width window this can be done by swapping 2,3 dim to 3,2\n",
     "    windows = x.permute(0, 1, 3, 2, 4, 5)\n",
     "    \n",
-    "    # now expand each window to across batch\n",
+    "    # now expand each window to across the batch\n",
+    "    # contiguous required because permute destroys items in contiguous memory but view required items\n",
+    "    # need to be in contiguous memory\n",
     "    windows = windows.contiguous().view(-1, window_size, window_size, C)\n",
     "    \n",
     "    return windows"
@@ -299,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 146,
    "id": "a05fd2a0",
    "metadata": {},
    "outputs": [
@@ -309,7 +311,7 @@
        "(torch.Size([1, 7, 7, 4]), torch.Size([9, 3, 3, 4]))"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
