window unpartition function tested

--- a/utils.ipynb
+++ b/utils.ipynb
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 148,
    "id": "e87df77f",
    "metadata": {},
    "outputs": [],
@@ -296,12 +296,12 @@
     "    # need to be in contiguous memory\n",
     "    windows = windows.contiguous().view(-1, window_size, window_size, C)\n",
     "    \n",
-    "    return windows"
+    "    return windows, (Hp, Wp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 150,
    "id": "a05fd2a0",
    "metadata": {},
    "outputs": [
@@ -311,7 +311,7 @@
        "(torch.Size([1, 7, 7, 4]), torch.Size([9, 3, 3, 4]))"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,33 +319,94 @@
    "source": [
     "x = torch.randn(1, 7, 7, 4).float()\n",
     "\n",
-    "x_t = window_partition(x, window_size=3)\n",
+    "x_t, _ = window_partition(x, window_size=3)\n",
+    "x.shape, x_t.shape\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2c19bcd",
+   "metadata": {},
+   "source": [
+    "##### window_unpartition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "id": "0df45250",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def window_unpartition(windows, window_size, pad_hw, hw):\n",
+    "    Hp, Wp = pad_hw\n",
+    "    H, W = hw\n",
+    "\n",
+    "    # we need to divide that by total number of windows to recover original batch size\n",
+    "    # total number of windows =  (Hp * Wp // window_size // window_size)\n",
+    "    B = windows.shape[0] // (Hp * Wp // window_size // window_size)\n",
+    "    \n",
+    "    # move the windows from from the batch dim to individual batch\n",
+    "    x = windows.view(B, Hp // window_size, Wp // window_size, window_size, window_size, -1)\n",
+    "    \n",
+    "    # swap the height and width \n",
+    "    x = x.permute(0, 1, 3, 2, 4, 5).contiguous()\n",
+    "\n",
+    "    # original dim conversion\n",
+    "    x = x.view(B, Hp, Wp, -1)\n",
+    "\n",
+    "    # remove added padding\n",
+    "    if Hp > H or Wp > W:\n",
+    "        x = x[:, :H, :W, :].contiguous()\n",
+    "\n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "id": "6c5da6c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([1, 7, 7, 4]), torch.Size([9, 3, 3, 4]))"
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = torch.randn(1, 7, 7, 4).float()\n",
+    "\n",
+    "x_t, pad_hw = window_partition(x, window_size=3)\n",
     "x.shape, x_t.shape\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f2c19bcd",
+   "execution_count": 158,
+   "id": "fc46b8a5",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0df45250",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6c5da6c3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 7, 7, 4])"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_r = window_unpartition(x_t, 3, pad_hw, hw=(7, 7))\n",
+    "x_r.shape"
+   ]
   },
   {
    "cell_type": "code",
