conditionaning frame selecting function added

--- a/utils.ipynb
+++ b/utils.ipynb
@@ -1083,12 +1083,99 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dc046c7d",
+   "metadata": {},
+   "source": [
+    "##### select_closest_cond_frames"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "adaa3468",
+   "execution_count": 248,
+   "id": "19876c09",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def select_closest_cond_frames(frame_idx, cond_frame_outputs, max_cond_frame_num):\n",
+    "    if max_cond_frame_num == -1 or len(cond_frame_outputs) <= max_cond_frame_num:\n",
+    "        selected_outputs = cond_frame_outputs\n",
+    "        unselected_outputs = {}\n",
+    "    else:\n",
+    "        assert max_cond_frame_num >= 2, 'conditioning frame should be >= 2'\n",
+    "        selected_outputs  = {}\n",
+    "\n",
+    "        # pick previous frame\n",
+    "        idx_before = max((t for t in cond_frame_outputs if t < frame_idx), default=None)\n",
+    "        if idx_before is not None:\n",
+    "            selected_outputs[idx_before] = cond_frame_outputs[idx_before]\n",
+    "\n",
+    "        # after frame\n",
+    "        idx_after = max((t for t in cond_frame_outputs if t >= frame_idx), default=None)\n",
+    "        if idx_after is not None:\n",
+    "            selected_outputs[idx_after] = cond_frame_outputs[idx_after]\n",
+    "\n",
+    "        \n",
+    "        # pick other available closest frames\n",
+    "        num_remain = max_cond_frame_num - len(selected_outputs)\n",
+    "        inds_reamin = sorted((t for t in cond_frame_outputs if t not in selected_outputs), \n",
+    "                             key=lambda x: abs(x-frame_idx))[:num_remain]\n",
+    "        selected_outputs.update((t, cond_frame_outputs[t]) for t in inds_reamin)\n",
+    "        unselected_outputs = {\n",
+    "            t: v for t, v in cond_frame_outputs.items() if t not in selected_outputs\n",
+    "        }\n",
+    "    return selected_outputs, unselected_outputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 256,
+   "id": "adaa3468",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current frame index: 6\n",
+      "Max conditioning frames: 3\n",
+      "\n",
+      "Selected outputs:\n",
+      "Frame 5: Output 5\n",
+      "Frame 11: Output 11\n",
+      "Frame 7: Output 7\n",
+      "\n",
+      "Unselected outputs:\n",
+      "Frame 1: Output 1\n",
+      "Frame 3: Output 3\n",
+      "Frame 9: Output 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "cond_frame_outputs = {\n",
+    "    1: \"Output 1\",\n",
+    "    3: \"Output 3\",\n",
+    "    5: \"Output 5\",\n",
+    "    7: \"Output 7\",\n",
+    "    9: \"Output 9\",\n",
+    "    11: \"Output 11\"\n",
+    "}\n",
+    "\n",
+    "frame_idx = 6\n",
+    "max_cond_frame_num = 3\n",
+    "\n",
+    "selected, unselected = select_closest_cond_frames(frame_idx, cond_frame_outputs, max_cond_frame_num)\n",
+    "\n",
+    "print(f\"Current frame index: {frame_idx}\")\n",
+    "print(f\"Max conditioning frames: {max_cond_frame_num}\")\n",
+    "print(\"\\nSelected outputs:\")\n",
+    "for k, v in selected.items():\n",
+    "    print(f\"Frame {k}: {v}\")\n",
+    "print(\"\\nUnselected outputs:\")\n",
+    "for k, v in unselected.items():\n",
+    "    print(f\"Frame {k}: {v}\")"
+   ]
   },
   {
    "cell_type": "code",
