multi scale attention started

--- a/utils.ipynb
+++ b/utils.ipynb
@@ -1178,27 +1178,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "93144304",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "23494418",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "##### hieradet (file)"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "0439fbac",
    "metadata": {},
    "source": [
-    "##### hieradet"
+    "##### MultiScaleAttention"
    ]
   },
   {
@@ -1208,8 +1200,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "import torch.functional as F"
+    "class MultiScaleAttention(nn.Module):\n",
+    "    def __init__(self, dim, dim_out, num_heads, q_pool):\n",
+    "        super().__init__()\n",
+    "    "
    ]
   },
   {
@@ -1218,6 +1212,12 @@
    "id": "9070ffa4",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11d722d8",
+   "metadata": {},
    "source": []
   },
   {
