multi head attention warmup tested

--- a/utils.ipynb
+++ b/utils.ipynb
@@ -1735,24 +1735,590 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 372,
    "id": "9e36d35e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class SelfAttention_v2(nn.Module):\n",
+    "    def __init__(self, d_in, d_out, qkv_bias=False):\n",
+    "        super().__init__()\n",
+    "        self.W_query = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "        self.W_key = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "        self.W_value = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        keys = self.W_key(x)\n",
+    "        values = self.W_value(x)\n",
+    "        queries = self.W_query(x)\n",
+    "\n",
+    "        attn_scores = queries @ keys.T\n",
+    "        attn_weights = torch.softmax(attn_scores/keys.shape[-1]**0.5, dim=-1)\n",
+    "\n",
+    "        context_vec = attn_weights @ values\n",
+    "        \n",
+    "        return context_vec\n",
+    "        "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 373,
+   "id": "b3cdc4a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.0517, 0.4695],\n",
+       "        [0.0541, 0.4706],\n",
+       "        [0.0542, 0.4709],\n",
+       "        [0.0531, 0.4681],\n",
+       "        [0.0559, 0.4759],\n",
+       "        [0.0519, 0.4651]], grad_fn=<MmBackward0>)"
+      ]
+     },
+     "execution_count": 373,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sa_v2 = SelfAttention_v2(d_in, d_out)\n",
+    "sa_v2(inputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 376,
    "id": "5691c5e7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.1690, 0.1715, 0.1715, 0.1609, 0.1654, 0.1618],\n",
+       "        [0.1592, 0.1713, 0.1709, 0.1668, 0.1613, 0.1704],\n",
+       "        [0.1588, 0.1718, 0.1715, 0.1666, 0.1609, 0.1705],\n",
+       "        [0.1628, 0.1672, 0.1671, 0.1685, 0.1647, 0.1697],\n",
+       "        [0.1535, 0.1806, 0.1798, 0.1617, 0.1547, 0.1697],\n",
+       "        [0.1665, 0.1621, 0.1622, 0.1710, 0.1687, 0.1695]],\n",
+       "       grad_fn=<SoftmaxBackward0>)"
+      ]
+     },
+     "execution_count": 376,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "queries = sa_v2.W_query(inputs)\n",
+    "keys = sa_v2.W_key(inputs)\n",
+    "attn_scores = queries @ keys.T\n",
+    "\n",
+    "attn_weights = torch.softmax(attn_scores / keys.shape[-1]**0.5, dim=-1)\n",
+    "attn_weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 378,
+   "id": "24fdbc2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 0., 0., 0., 0., 0.],\n",
+       "        [1., 1., 0., 0., 0., 0.],\n",
+       "        [1., 1., 1., 0., 0., 0.],\n",
+       "        [1., 1., 1., 1., 0., 0.],\n",
+       "        [1., 1., 1., 1., 1., 0.],\n",
+       "        [1., 1., 1., 1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 378,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "context_length = attn_scores.shape[0]\n",
+    "mask_simple = torch.tril(torch.ones(context_length, context_length))\n",
+    "mask_simple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 379,
+   "id": "d240c858",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.1690, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.1592, 0.1713, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.1588, 0.1718, 0.1715, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.1628, 0.1672, 0.1671, 0.1685, 0.0000, 0.0000],\n",
+       "        [0.1535, 0.1806, 0.1798, 0.1617, 0.1547, 0.0000],\n",
+       "        [0.1665, 0.1621, 0.1622, 0.1710, 0.1687, 0.1695]],\n",
+       "       grad_fn=<MulBackward0>)"
+      ]
+     },
+     "execution_count": 379,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "masked_simple = attn_weights * mask_simple\n",
+    "masked_simple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 382,
+   "id": "3d772072",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.4817, 0.5183, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.3162, 0.3422, 0.3415, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.2446, 0.2512, 0.2510, 0.2532, 0.0000, 0.0000],\n",
+       "        [0.1849, 0.2175, 0.2166, 0.1947, 0.1864, 0.0000],\n",
+       "        [0.1665, 0.1621, 0.1622, 0.1710, 0.1687, 0.1695]],\n",
+       "       grad_fn=<DivBackward0>)"
+      ]
+     },
+     "execution_count": 382,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "row_sums = masked_simple.sum(dim=-1, keepdim=True)\n",
+    "masked_simple_norm = masked_simple / row_sums\n",
+    "masked_simple_norm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 388,
+   "id": "8414dfbd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0., 1., 1., 1., 1., 1.],\n",
+       "        [0., 0., 1., 1., 1., 1.],\n",
+       "        [0., 0., 0., 1., 1., 1.],\n",
+       "        [0., 0., 0., 0., 1., 1.],\n",
+       "        [0., 0., 0., 0., 0., 1.],\n",
+       "        [0., 0., 0., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 388,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mask = torch.triu(torch.ones(context_length, context_length), diagonal=1)\n",
+    "masked = attn_scores.masked_fill(mask.bool(), -torch.inf)\n",
+    "masked\n",
+    "mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 389,
+   "id": "042c78ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.4817, 0.5183, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.3162, 0.3422, 0.3415, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.2446, 0.2512, 0.2510, 0.2532, 0.0000, 0.0000],\n",
+       "        [0.1849, 0.2175, 0.2166, 0.1947, 0.1864, 0.0000],\n",
+       "        [0.1665, 0.1621, 0.1622, 0.1710, 0.1687, 0.1695]],\n",
+       "       grad_fn=<SoftmaxBackward0>)"
+      ]
+     },
+     "execution_count": 389,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "attn_weights = torch.softmax(masked / keys.shape[-1]**0.5, dim=-1)\n",
+    "attn_weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 391,
+   "id": "7eabc4e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0., 2., 2., 0., 0., 0.],\n",
+       "        [2., 2., 0., 0., 0., 2.],\n",
+       "        [2., 2., 0., 2., 0., 2.],\n",
+       "        [0., 0., 2., 2., 2., 2.],\n",
+       "        [0., 2., 0., 2., 0., 0.],\n",
+       "        [2., 0., 0., 0., 2., 0.]])"
+      ]
+     },
+     "execution_count": 391,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dropout = torch.nn.Dropout(0.5)\n",
+    "example = torch.ones(6, 6)\n",
+    "dropout(example)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 392,
+   "id": "e8ce0bb8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.9635, 1.0365, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.6325, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.0000, 0.5025, 0.0000, 0.5063, 0.0000, 0.0000],\n",
+       "        [0.3697, 0.4350, 0.0000, 0.3894, 0.3727, 0.0000],\n",
+       "        [0.0000, 0.3243, 0.3244, 0.3419, 0.3374, 0.3389]],\n",
+       "       grad_fn=<MulBackward0>)"
+      ]
+     },
+     "execution_count": 392,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dropout(attn_weights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 394,
+   "id": "580d30f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 6, 3])"
+      ]
+     },
+     "execution_count": 394,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "batch = torch.stack((inputs, inputs), dim=0)\n",
+    "batch.shape"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24fdbc2a",
+   "id": "887bd710",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch = torch.stack((inputs, inputs), dim=0)\n",
+    "print(batch.shape) # 2 inputs with 6 tokens each, and each token has embedding dimension 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 395,
+   "id": "86b05f11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CausalAttention(nn.Module):\n",
+    "    def __init__(self, d_in, d_out, context_length, dropout, qkv_bias=False):\n",
+    "        super().__init__()\n",
+    "        self.d_out = d_out\n",
+    "        self.W_query = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "        self.W_key = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "        self.W_value = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "        self.register_buffer('mask', torch.triu(torch.ones(context_length, context_length), diagonal=1))\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        b, num_tokens, d_in = x.shape\n",
+    "        keys = self.W_key(x)\n",
+    "        queries = self.W_query(x)\n",
+    "        values = self.W_value(x)\n",
+    "\n",
+    "        attn_scores = queries @ keys.transpose(1, 2)\n",
+    "        attn_scores.masked_fill(self.mask.bool()[:num_tokens, :num_tokens], -torch.inf)\n",
+    "        attn_weights = torch.softmax(attn_scores/keys.shape[-1]**0.5, dim=-1)\n",
+    "        \n",
+    "        context_vec = attn_weights @ values\n",
+    "\n",
+    "        return context_vec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 398,
+   "id": "405fc3cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 6, 2])"
+      ]
+     },
+     "execution_count": 398,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "context_length = batch.shape[1]\n",
+    "ca = CausalAttention(d_in, d_out, context_length, 0.0)\n",
+    "context_vecs = ca(batch)\n",
+    "context_vecs.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 400,
+   "id": "bab43d08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MultiHeadAttentionWrapper(nn.Module):\n",
+    "    def __init__(self, d_in, d_out, context_length, dropout, num_heads, qkv_bias=False):\n",
+    "        super().__init__()\n",
+    "        self.heads = nn.ModuleList([CausalAttention(d_in, d_out, context_length, dropout, qkv_bias) for _ \\\n",
+    "                                    in range(num_heads)])\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        return torch.cat([head(x) for head in self.heads], dim=-1)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 405,
+   "id": "94c4d061",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 6, 10])"
+      ]
+     },
+     "execution_count": 405,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "context_length = batch.shape[1]\n",
+    "d_in, d_out = 3, 2\n",
+    "mha = MultiHeadAttentionWrapper(d_in, d_out, context_length, 0.0, num_heads=5)\n",
+    "context_vecs = mha(batch)\n",
+    "context_vecs.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 407,
+   "id": "92ed23fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MultiHeadAttention(nn.Module):\n",
+    "    def __init__(self, d_in, d_out, context_length, dropout, num_heads, qkv_bias=False):\n",
+    "        super().__init__()\n",
+    "        assert (d_out % num_heads == 0), \"d_out must be divisible my num_heads\"\n",
+    "        \n",
+    "        self.d_out = d_out\n",
+    "        self.num_heads = num_heads\n",
+    "        self.head_dim = d_out // num_heads\n",
+    "        \n",
+    "        self.W_query = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "        self.W_key = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "        self.W_value = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "\n",
+    "        self.out_proj = nn.Linear(d_out, d_out)\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "        \n",
+    "        self.register_buffer('mask', torch.triu(torch.ones(context_length, context_length), diagonal=1))\n",
+    "\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        b, num_tokens, d_in = x.shape\n",
+    "\n",
+    "        keys = self.W_key(x)\n",
+    "        queries = self.W_query(x)\n",
+    "        values = self.W_value(x)\n",
+    "\n",
+    "        keys = keys.view(b, num_tokens, self.num_heads, self.head_dim)\n",
+    "        values = values.view(b, num_tokens, self.num_heads, self.head_dim)\n",
+    "        queries = queries.view(b, num_tokens, self.num_heads, self.head_dim)\n",
+    "\n",
+    "        keys = keys.transpose(1, 2)\n",
+    "        values = values.transpose(1, 2)\n",
+    "        queries = queries.transpose(1, 2)\n",
+    "\n",
+    "        attn_scores = queries @ keys.transpose(2, 3)\n",
+    "\n",
+    "        mask_bool = self.mask.bool()[:num_tokens, :num_tokens]\n",
+    "\n",
+    "        attn_scores.masked_fill(mask_bool, -torch.inf)\n",
+    "\n",
+    "        attn_weights = torch.softmax(attn_scores / keys.shape[-1]**0.5, dim=-1)\n",
+    "        attn_weights = self.dropout(attn_weights)\n",
+    "\n",
+    "        context_vec = (attn_weights @ values).transpose(1, 2)\n",
+    "\n",
+    "        context_vec = context_vec.contiguous().view(b, num_tokens, self.d_out)\n",
+    "        context_vec = self.out_proj(context_vec)\n",
+    "\n",
+    "        return context_vec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 410,
+   "id": "e6e3694c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 6, 2])"
+      ]
+     },
+     "execution_count": 410,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "batch_size, context_length, d_in = batch.shape\n",
+    "d_out = 2\n",
+    "mha = MultiHeadAttention(d_in, d_out, context_length, 0.0, num_heads=2)\n",
+    "context_vecs = mha(batch)\n",
+    "context_vecs.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 415,
+   "id": "16a034c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 2, 3, 4])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 2, 3, 3])"
+      ]
+     },
+     "execution_count": 415,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# (b, num_heads, num_tokens, head_dim) = (1, 2, 3, 4)\n",
+    "a = torch.tensor([[[[0.2745, 0.6584, 0.2775, 0.8573],\n",
+    "                    [0.8993, 0.0390, 0.9268, 0.7388],\n",
+    "                    [0.7179, 0.7058, 0.9156, 0.4340]],\n",
+    "\n",
+    "                   [[0.0772, 0.3565, 0.1479, 0.5331],\n",
+    "                    [0.4066, 0.2318, 0.4545, 0.9737],\n",
+    "                    [0.4606, 0.5159, 0.4220, 0.5786]]]])\n",
+    "print(a.shape)\n",
+    "(a@a.transpose(2, 3)).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 417,
+   "id": "70d0a54c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([3, 4]), torch.Size([3, 3]))"
+      ]
+     },
+     "execution_count": 417,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first_head = a[0, 0, :, :]\n",
+    "first_res = first_head @ first_head.T\n",
+    "first_head.shape, first_res.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 418,
+   "id": "8239f7bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([3, 4]), torch.Size([3, 3]))"
+      ]
+     },
+     "execution_count": 418,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "second_head  = a[0, 1, :, :]\n",
+    "second_res = second_head @ second_head.T\n",
+    "second_head.shape, second_res.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52d418bd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1760,7 +2326,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d240c858",
+   "id": "23f96a81",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "529cf290",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1a55374",
    "metadata": {},
    "outputs": [],
    "source": []
