--- a/utils.ipynb
+++ b/utils.ipynb
@@ -1187,18 +1187,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0439fbac",
+   "id": "f33a7a97",
    "metadata": {},
    "source": [
-    "##### MultiScaleAttention"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "11fcaa6d",
-   "metadata": {},
-   "source": [
-    "##### scaled_dot_product_attention"
+    "##### Attention (Note)"
    ]
   },
   {
@@ -2348,8 +2340,24 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "b8028072",
+   "metadata": {},
+   "source": [
+    "##### MultiScaleAttention"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3522f81",
+   "metadata": {},
+   "source": [
+    "##### scaled_dot_product_attention"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 446,
    "id": "88e044de",
    "metadata": {},
    "outputs": [],
@@ -2358,51 +2366,107 @@
     "\n",
     "def scaled_dot_product_attention(query, key, value, attn_mask=None, dropout_p=0.0,\n",
     "                                  is_causal=False, scale=None):\n",
-    "    # S - ? seq length. L - ? seq.length\n",
+    "    # S, L - H*W shape (seq length of query, and key).\n",
     "    L , S = query.size(-2), key.size(-2)\n",
     "\n",
-    "    # ??\n",
+    "    # this is normalization factor in attention (1/sqrt(out_dim))\n",
     "    scale_factor = 1 / math.sqrt(query.size(-1)) if scale is None else scale\n",
     "\n",
     "    # ??\n",
     "    attn_bias = torch.zeros(L, S, dtype=query.dtype)\n",
     "\n",
-    "    # ??\n",
+    "    # this is for causal mask in attention which mask feature tokens\n",
     "    if is_causal:\n",
-    "        pass\n",
+    "        assert attn_mask is None\n",
+    "        temp_mask = torch.ones(L, S, dtype=torch.bool).tril(diagonal=0)\n",
+    "        attn_bias.masked_fill(temp_mask.logical_not(), float('-inf'))\n",
+    "        attn_bias.to(query.dtype)\n",
     "\n",
     "    # ??\n",
     "    if attn_mask is not None:\n",
     "        pass\n",
     "\n",
-    "    # ??\n",
+    "    # query key dot product in attention operation\n",
     "    attn_weight = query @ key.transpose(-2, -1) * scale_factor\n",
     "    \n",
-    "    # ??\n",
     "    attn_weight += attn_bias\n",
     "\n",
-    "    # ??\n",
+    "    # normalized the attention weight between [0, 1]\n",
     "    attn_weight = torch.softmax(attn_weight, dim=-1)\n",
     "\n",
-    "    #??\n",
+    "    # will make cerntail weights to zero with prob of dropout_p\n",
     "    attn_weight = torch.dropout(attn_weight, dropout_p, train=True)\n",
     "\n",
-    "    return attn_weight @ value\n",
-    "\n"
+    "    # final context vector\n",
+    "    return attn_weight @ value\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a4dfe369",
+   "execution_count": 475,
+   "id": "2bfb5686",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def do_pool(x, pool=None, norm=None):\n",
+    "    if pool is None:\n",
+    "        return x\n",
+    "    \n",
+    "    # (B, H, W, C) -> (B, C, H, W)\n",
+    "    x = x.permute(0, 3, 1, 2)\n",
+    "    \n",
+    "    x = pool(x)\n",
+    "\n",
+    "    x = x.permute(0, 2, 3, 1)\n",
+    "    \n",
+    "    if norm:\n",
+    "        x = norm(x)\n",
+    "    \n",
+    "    return x"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
-   "id": "a86d0630",
+   "execution_count": 476,
+   "id": "d0d9c281",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input shape torch.Size([2, 6, 6, 3])\n",
+      "pooled x torch.Size([2, 3, 3, 3])\n",
+      "mean, std tensor(3.8885) tensor(0.8431)\n",
+      "pooled norm torch.Size([2, 3, 3, 3])\n",
+      "mean, std tensor(-1.7219e-07, grad_fn=<MeanBackward0>) tensor(1.0093, grad_fn=<StdBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "batch_size, height, width, channels = 2, 6, 6, 3\n",
+    "x = torch.rand(batch_size, height, width, channels) * 5  \n",
+    "\n",
+    "print('input shape', x.shape)\n",
+    "\n",
+    "# this cut the size half in both width and height\n",
+    "pool = nn.MaxPool2d(kernel_size=2, stride=2)\n",
+    "\n",
+    "pooled_x = do_pool(x, pool)\n",
+    "\n",
+    "print('pooled x',  pooled_x.shape)\n",
+    "print('mean, std', pooled_x.mean(), pooled_x.std())\n",
+    "\n",
+    "norm = nn.LayerNorm(channels)\n",
+    "pooled_norm = do_pool(x, pool, norm)\n",
+    "print('pooled norm', pooled_norm.shape)\n",
+    "print('mean, std', pooled_norm.mean(), pooled_norm.std())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 494,
+   "id": "a4dfe369",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2412,7 +2476,7 @@
     "\n",
     "        self.dim = dim\n",
     "        self.dim_out = dim_out\n",
-    "        \n",
+    "\n",
     "        self.num_heads = num_heads\n",
     "        head_dim = dim_out // num_heads\n",
     "        self.scale = head_dim**-0.5\n",
@@ -2421,31 +2485,51 @@
     "        self.qkv = nn.Linear(dim, dim_out * 3)\n",
     "        self.proj = nn.Linear(dim_out, dim_out)\n",
     "\n",
-    "    \n",
     "    def forward(self, x):\n",
     "        B, H, W, _ = x.shape\n",
     "\n",
-    "        # apply linear operation across channels and reshape the channels\n",
-    "        # into 3 buckets (query, key, value) each further split into  buckets of num_heads\n",
-    "        qkv = self.qkv(x).reshape(B, H*W, 3, self.num_heads, -1)\n",
+    "        # 3 is for query, key, value\n",
+    "        # this is shortcut way of getting query, key, value embeddigs by reshaping\n",
+    "        # and pulling respective ones.\n",
+    "        # reshape try to (B, H*W, 3, num_heads, dim_out//num_heads)\n",
+    "        qkv = self.qkv(x)\n",
+    "        print(qkv.shape)\n",
+    "        qkv = qkv.reshape(B, H*W, 3, self.num_heads, -1)\n",
+    "        print(qkv.shape)\n",
     "\n",
-    "        # now pull out q, k, v\n",
-    "        # unbind will split the tensor across given dim. \n",
+    "        # extract query, key, value\n",
+    "        # q, k, v  each shape will be (B, H*W, num_heads, dim_out//num_heads)\n",
     "        q, k, v = torch.unbind(qkv, 2)\n",
+    "\n",
+    "        # q pooling, reduce the height and width of the query\n",
+    "        if self.q_pool:\n",
+    "            q = do_pool(q.reshape(B, H, W, -1), self.q_pool)\n",
+    "\n",
+    "            # downsampled query height and width\n",
+    "            H, W = q.shape[1:3] \n",
+    "            q = q.reshape(B, H*W, self.num_heads, -1)\n",
     "        \n",
-    "        # https://pytorch.org/docs/stable/generated/torch.nn.functional.scaled_dot_product_attention.html\n",
-    "        # \n",
+    "        print(q.shape, k.shape, v.shape)\n",
+    "            \n",
+    "\n",
+    "        # apply attention operation\n",
+    "        # attentions operation we have to peform attention operation independent of each head\n",
+    "        # so we need to transpose H*W with num_heads.\n",
+    "        # q,k,v shape after transpose will be (B, num_heads, H*W, dim_out//num_heads)\n",
     "        x = scaled_dot_product_attention(\n",
     "            q.transpose(1, 2),\n",
     "            k.transpose(1, 2),\n",
     "            v.transpose(1, 2),\n",
     "        )\n",
-    "        "
+    "\n",
+    "        print(x.shape)\n",
+    "        \n",
+    "        return x\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 495,
    "id": "73476b35",
    "metadata": {},
    "outputs": [
@@ -2468,7 +2552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 496,
    "id": "9070ffa4",
    "metadata": {},
    "outputs": [
@@ -2477,6 +2561,9 @@
      "output_type": "stream",
      "text": [
       "torch.Size([1, 32, 32, 3])\n",
+      "torch.Size([1, 32, 32, 192])\n",
+      "torch.Size([1, 1024, 3, 4, 16])\n",
+      "torch.Size([1, 1024, 4, 16]) torch.Size([1, 1024, 4, 16]) torch.Size([1, 1024, 4, 16])\n",
       "torch.Size([1, 4, 1024, 16])\n"
      ]
     }
@@ -2487,12 +2574,35 @@
     "inp = lres_img[None].clone().float()\n",
     "batch_size, height, width, channel = inp.shape\n",
     "print(inp.shape)\n",
-    "msa(inp)"
+    "msa(inp);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 497,
+   "id": "e8357f7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 32, 32, 192])\n",
+      "torch.Size([1, 1024, 3, 4, 16])\n",
+      "torch.Size([1, 256, 4, 16]) torch.Size([1, 1024, 4, 16]) torch.Size([1, 1024, 4, 16])\n",
+      "torch.Size([1, 4, 256, 16])\n"
+     ]
+    }
+   ],
+   "source": [
+    "pool = nn.MaxPool2d(kernel_size=2, stride=2)\n",
+    "msa = MultiScaleAttention(dim=3, dim_out=64, num_heads=4, q_pool=pool)\n",
+    "msa(inp);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 498,
    "id": "60d48951",
    "metadata": {},
    "outputs": [
