init started for heira

--- a/utils.ipynb
+++ b/utils.ipynb
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 595,
+   "execution_count": 622,
    "id": "69b951f4",
    "metadata": {},
    "outputs": [],
@@ -2630,75 +2630,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 606,
+   "execution_count": 635,
    "id": "1ddf6236",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Hiera(nn.Module):\n",
-    "    def __init__(self, embed_dim = 96, num_heads = 1, drop_path_rate = 0.0, q_pool = 3, \n",
-    "                 q_stride = (2, 2),  stages = (2, 3, 16, 3), dim_mul = 2.0, head_mul = 2.0, \n",
-    "                 window_pos_embed_bkg_spatial_size = (14, 14), window_spec = (8, 4, 14, 7),\n",
-    "                 global_att_blocks = (12, 16, 20), return_interm_layers = True):\n",
+    "    def __init__(self, embed_dim = 96, num_heads = 1, drop_path_rate = 0.0,  q_pool = 3,\n",
+    "                  q_stride = (2, 2), stages = (2, 3, 16, 3), dim_mul = 2.0, head_mul = 2.0, \n",
+    "                  window_pos_embed_bkg_spatial_size = (14, 14), window_spec = (8, 4, 14, 7),\n",
+    "                  global_att_blocks = (12, 16, 20), return_interm_layers = True):\n",
     "        super().__init__()\n",
     "\n",
+    "        \n",
+    "        #??\n",
     "        assert len(stages) == len(window_spec)\n",
     "        self.window_spec = window_spec\n",
     "\n",
+    "        #??\n",
     "        depth = sum(stages)\n",
+    "\n",
+    "        # downsampling ratio of width and height\n",
     "        self.q_stride = q_stride\n",
     "\n",
-    "        # cum sum of stages with 1 subtracted from the cum sum\n",
-    "        self.stage_ends = [sum(stages[:i]) - 1 for i in range(1, len(stages) + 1)]\n",
-    "\n",
-    "        assert  0 <= q_pool <= len(self.stage_ends[:-1])\n",
+    "        # cum sum with 1 less\n",
+    "        self.stage_ends = [sum(stages[:i]) -1 for i in range(1, len(stages)+1)]\n",
     "        \n",
-    "        # pick q_pool of cumulative sum\n",
-    "        self.q_pool_blocks = [x + 1 for x in self.stage_ends[:-1][:q_pool]]\n",
+    "\n",
+    "        #??\n",
+    "        assert 0 <= q_pool <= len(self.stage_ends[:-1])\n",
     "        \n",
-    "        self.return_interm_layers  = return_interm_layers\n",
+    "        #??\n",
+    "        self.return_interm_layers = return_interm_layers\n",
     "\n",
+    "        \n",
+    "        # convolution operation\n",
+    "        self.patch_embed = PatchEmbed(embed_dim=embed_dim)\n",
+    "        \n",
+    "        #??\n",
+    "        self.global_att_blocks = (12, 16, 20)\n",
     "\n",
-    "        self.patch_embed = PatchEmbed(embed_dim = embed_dim)\n",
-    "\n",
-    "        self.global_att_blocks = global_att_blocks\n",
-    "\n",
+    "        \n",
+    "        #??\n",
     "        self.window_pos_embed_bkg_spatial_size = window_pos_embed_bkg_spatial_size\n",
+    "        \n",
+    "        #??\n",
+    "        self.pos_embed_window = nn.Parameter(\n",
+    "            torch.zeros(1, embed_dim, self.window_spec[0], self.window_spec[0])\n",
+    "        )\n",
     "\n",
-    "        self.pos_embed = nn.Parameter(torch.zeros(1, embed_dim, self.window_spec[0], \n",
-    "                                                self.window_spec[0]))\n",
-    "\n",
+    "        #??\n",
     "        dpr = [x.item() for x in torch.linspace(0, drop_path_rate, depth)]\n",
+    "        \n",
     "\n",
-    "        cur_stage  = 1\n",
+    "        cur_stage = 1\n",
     "        self.blocks = nn.ModuleList()\n",
-    "\n",
+    "        \n",
     "        for i in range(depth):\n",
     "            dim_out = embed_dim\n",
     "\n",
-    "            window_size = self.window_spec[cur_stage - 1]\n"
+    "            #??\n",
+    "            window_size = self.window_spec[cur_stage - 1]\n",
+    "\n",
+    "            #??\n",
+    "            if self.global_att_blocks is not None:\n",
+    "                window_size = 0 if i in self.global_att_blocks else window_size\n",
+    "\n",
+    "            \n",
+    "            if i - 1 in self.stage_ends:\n",
+    "                #??\n",
+    "                dim_out = int(embedding_dim * dim_mul)\n",
+    "                \n",
+    "                \n",
+    "\n",
+    "            \n",
+    "        \n",
+    "        \n",
+    "\n",
+    "\n",
+    "\n",
+    "        \n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 607,
+   "execution_count": 634,
    "id": "9b641565",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Hiera(\n",
-       "  (patch_embed): PatchEmbed(\n",
-       "    (proj): Conv2d(3, 96, kernel_size=(7, 7), stride=(4, 4), padding=(3, 3))\n",
-       "  )\n",
-       "  (blocks): ModuleList()\n",
-       ")"
-      ]
-     },
-     "execution_count": 607,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'shape'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[634], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mHiera\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[633], line 47\u001b[0m, in \u001b[0;36mHiera.__init__\u001b[0;34m(self, embed_dim, num_heads, drop_path_rate, q_pool, q_stride, stages, dim_mul, head_mul, window_pos_embed_bkg_spatial_size, window_spec, global_att_blocks, return_interm_layers)\u001b[0m\n\u001b[1;32m     45\u001b[0m \u001b[38;5;66;03m#??\u001b[39;00m\n\u001b[1;32m     46\u001b[0m dpr \u001b[38;5;241m=\u001b[39m [x\u001b[38;5;241m.\u001b[39mitem() \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mlinspace(\u001b[38;5;241m0\u001b[39m, drop_path_rate, depth)]\n\u001b[0;32m---> 47\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mdpr\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshape\u001b[49m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'shape'"
+     ]
     }
    ],
    "source": [
@@ -2707,24 +2738,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 601,
+   "execution_count": 630,
    "id": "5bba8f25",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([0.0000, 1.6667, 3.3333, 5.0000])"
+       "torch.Size([1, 96, 8, 8])"
       ]
      },
-     "execution_count": 601,
+     "execution_count": 630,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "torch.linspace(0, 5, 4)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
