--- a/utils.ipynb
+++ b/utils.ipynb
@@ -2630,7 +2630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 635,
+   "execution_count": 636,
    "id": "1ddf6236",
    "metadata": {},
    "outputs": [],
@@ -2659,6 +2659,7 @@
     "\n",
     "        #??\n",
     "        assert 0 <= q_pool <= len(self.stage_ends[:-1])\n",
+    "        self.q_pool_blocks = [x + 1 for x in self.stage_ends[:-1]][:q_pool]\n",
     "        \n",
     "        #??\n",
     "        self.return_interm_layers = return_interm_layers\n",
@@ -2700,36 +2701,169 @@
     "            if i - 1 in self.stage_ends:\n",
     "                #??\n",
     "                dim_out = int(embedding_dim * dim_mul)\n",
-    "                \n",
-    "                \n",
-    "\n",
+    "                num_heads = int(num_heads * head_mul)\n",
+    "                cur_stage += 1\n",
     "            \n",
-    "        \n",
-    "        \n",
+    "            #??\n",
+    "            block = MultiScaleBlock(\n",
+    "                dim = embed_dim,\n",
+    "                dim_out = dim_out,\n",
+    "                num_heads = num_heads,\n",
+    "                drop_path = dpr[i],\n",
+    "                q_stride = self.q_stride if i in self.q_pool_blocks else None,\n",
+    "                window_size = window_size \n",
+    "            )\n",
+    "\n",
+    "            embed_dim = dim_out\n",
+    "            self.blocks.append(block)\n",
     "\n",
     "\n",
     "\n",
-    "        \n",
-    "\n"
+    "        self.channel_list = ([self.blocks[i].dim_out for i in self.stage_ends[::-1]]\n",
+    "                             if return_interm_layers else [self.blocks[-1].dim_out])\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 634,
+   "execution_count": 637,
    "id": "9b641565",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'shape'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[634], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mHiera\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[633], line 47\u001b[0m, in \u001b[0;36mHiera.__init__\u001b[0;34m(self, embed_dim, num_heads, drop_path_rate, q_pool, q_stride, stages, dim_mul, head_mul, window_pos_embed_bkg_spatial_size, window_spec, global_att_blocks, return_interm_layers)\u001b[0m\n\u001b[1;32m     45\u001b[0m \u001b[38;5;66;03m#??\u001b[39;00m\n\u001b[1;32m     46\u001b[0m dpr \u001b[38;5;241m=\u001b[39m [x\u001b[38;5;241m.\u001b[39mitem() \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mlinspace(\u001b[38;5;241m0\u001b[39m, drop_path_rate, depth)]\n\u001b[0;32m---> 47\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mdpr\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshape\u001b[49m)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'shape'"
-     ]
+     "data": {
+      "text/plain": [
+       "Hiera(\n",
+       "  (patch_embed): PatchEmbed(\n",
+       "    (proj): Conv2d(3, 96, kernel_size=(7, 7), stride=(4, 4), padding=(3, 3))\n",
+       "  )\n",
+       "  (blocks): ModuleList(\n",
+       "    (0-1): 2 x MultiScaleBlock(\n",
+       "      (norm1): LayerNorm((96,), eps=1e-06, elementwise_affine=True)\n",
+       "      (attn): MultiScaleAttention(\n",
+       "        (qkv): Linear(in_features=96, out_features=288, bias=True)\n",
+       "        (proj): Linear(in_features=96, out_features=96, bias=True)\n",
+       "      )\n",
+       "      (drop_path): Identity()\n",
+       "      (norm2): LayerNorm((96,), eps=1e-06, elementwise_affine=True)\n",
+       "      (mlp): MLP(\n",
+       "        (layers): ModuleList(\n",
+       "          (0): Linear(in_features=96, out_features=384, bias=True)\n",
+       "          (1): Linear(in_features=384, out_features=96, bias=True)\n",
+       "        )\n",
+       "        (act): GELU(approximate='none')\n",
+       "      )\n",
+       "    )\n",
+       "    (2): MultiScaleBlock(\n",
+       "      (norm1): LayerNorm((96,), eps=1e-06, elementwise_affine=True)\n",
+       "      (pool): MaxPool2d(kernel_size=(2, 2), stride=(2, 2), padding=0, dilation=1, ceil_mode=False)\n",
+       "      (attn): MultiScaleAttention(\n",
+       "        (q_pool): MaxPool2d(kernel_size=(2, 2), stride=(2, 2), padding=0, dilation=1, ceil_mode=False)\n",
+       "        (qkv): Linear(in_features=96, out_features=384, bias=True)\n",
+       "        (proj): Linear(in_features=128, out_features=128, bias=True)\n",
+       "      )\n",
+       "      (drop_path): Identity()\n",
+       "      (norm2): LayerNorm((128,), eps=1e-06, elementwise_affine=True)\n",
+       "      (mlp): MLP(\n",
+       "        (layers): ModuleList(\n",
+       "          (0): Linear(in_features=128, out_features=512, bias=True)\n",
+       "          (1): Linear(in_features=512, out_features=128, bias=True)\n",
+       "        )\n",
+       "        (act): GELU(approximate='none')\n",
+       "      )\n",
+       "      (proj): Linear(in_features=96, out_features=128, bias=True)\n",
+       "    )\n",
+       "    (3-4): 2 x MultiScaleBlock(\n",
+       "      (norm1): LayerNorm((128,), eps=1e-06, elementwise_affine=True)\n",
+       "      (attn): MultiScaleAttention(\n",
+       "        (qkv): Linear(in_features=128, out_features=384, bias=True)\n",
+       "        (proj): Linear(in_features=128, out_features=128, bias=True)\n",
+       "      )\n",
+       "      (drop_path): Identity()\n",
+       "      (norm2): LayerNorm((128,), eps=1e-06, elementwise_affine=True)\n",
+       "      (mlp): MLP(\n",
+       "        (layers): ModuleList(\n",
+       "          (0): Linear(in_features=128, out_features=512, bias=True)\n",
+       "          (1): Linear(in_features=512, out_features=128, bias=True)\n",
+       "        )\n",
+       "        (act): GELU(approximate='none')\n",
+       "      )\n",
+       "    )\n",
+       "    (5): MultiScaleBlock(\n",
+       "      (norm1): LayerNorm((128,), eps=1e-06, elementwise_affine=True)\n",
+       "      (pool): MaxPool2d(kernel_size=(2, 2), stride=(2, 2), padding=0, dilation=1, ceil_mode=False)\n",
+       "      (attn): MultiScaleAttention(\n",
+       "        (q_pool): MaxPool2d(kernel_size=(2, 2), stride=(2, 2), padding=0, dilation=1, ceil_mode=False)\n",
+       "        (qkv): Linear(in_features=128, out_features=384, bias=True)\n",
+       "        (proj): Linear(in_features=128, out_features=128, bias=True)\n",
+       "      )\n",
+       "      (drop_path): Identity()\n",
+       "      (norm2): LayerNorm((128,), eps=1e-06, elementwise_affine=True)\n",
+       "      (mlp): MLP(\n",
+       "        (layers): ModuleList(\n",
+       "          (0): Linear(in_features=128, out_features=512, bias=True)\n",
+       "          (1): Linear(in_features=512, out_features=128, bias=True)\n",
+       "        )\n",
+       "        (act): GELU(approximate='none')\n",
+       "      )\n",
+       "    )\n",
+       "    (6-20): 15 x MultiScaleBlock(\n",
+       "      (norm1): LayerNorm((128,), eps=1e-06, elementwise_affine=True)\n",
+       "      (attn): MultiScaleAttention(\n",
+       "        (qkv): Linear(in_features=128, out_features=384, bias=True)\n",
+       "        (proj): Linear(in_features=128, out_features=128, bias=True)\n",
+       "      )\n",
+       "      (drop_path): Identity()\n",
+       "      (norm2): LayerNorm((128,), eps=1e-06, elementwise_affine=True)\n",
+       "      (mlp): MLP(\n",
+       "        (layers): ModuleList(\n",
+       "          (0): Linear(in_features=128, out_features=512, bias=True)\n",
+       "          (1): Linear(in_features=512, out_features=128, bias=True)\n",
+       "        )\n",
+       "        (act): GELU(approximate='none')\n",
+       "      )\n",
+       "    )\n",
+       "    (21): MultiScaleBlock(\n",
+       "      (norm1): LayerNorm((128,), eps=1e-06, elementwise_affine=True)\n",
+       "      (pool): MaxPool2d(kernel_size=(2, 2), stride=(2, 2), padding=0, dilation=1, ceil_mode=False)\n",
+       "      (attn): MultiScaleAttention(\n",
+       "        (q_pool): MaxPool2d(kernel_size=(2, 2), stride=(2, 2), padding=0, dilation=1, ceil_mode=False)\n",
+       "        (qkv): Linear(in_features=128, out_features=384, bias=True)\n",
+       "        (proj): Linear(in_features=128, out_features=128, bias=True)\n",
+       "      )\n",
+       "      (drop_path): Identity()\n",
+       "      (norm2): LayerNorm((128,), eps=1e-06, elementwise_affine=True)\n",
+       "      (mlp): MLP(\n",
+       "        (layers): ModuleList(\n",
+       "          (0): Linear(in_features=128, out_features=512, bias=True)\n",
+       "          (1): Linear(in_features=512, out_features=128, bias=True)\n",
+       "        )\n",
+       "        (act): GELU(approximate='none')\n",
+       "      )\n",
+       "    )\n",
+       "    (22-23): 2 x MultiScaleBlock(\n",
+       "      (norm1): LayerNorm((128,), eps=1e-06, elementwise_affine=True)\n",
+       "      (attn): MultiScaleAttention(\n",
+       "        (qkv): Linear(in_features=128, out_features=384, bias=True)\n",
+       "        (proj): Linear(in_features=128, out_features=128, bias=True)\n",
+       "      )\n",
+       "      (drop_path): Identity()\n",
+       "      (norm2): LayerNorm((128,), eps=1e-06, elementwise_affine=True)\n",
+       "      (mlp): MLP(\n",
+       "        (layers): ModuleList(\n",
+       "          (0): Linear(in_features=128, out_features=512, bias=True)\n",
+       "          (1): Linear(in_features=512, out_features=128, bias=True)\n",
+       "        )\n",
+       "        (act): GELU(approximate='none')\n",
+       "      )\n",
+       "    )\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 637,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
